LexParser.py
# Generated from Lex.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LexParser ( Parser ):

    grammarFileName = "Lex.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def '", "'('", "'):'", "', '", "': '", 
                     "' '", "'\\t'", "')'", "'for '", "' in range('", "'if '", 
                     "':'", "'else:'", "' = '", "'int'", "'str'", "'float'", 
                     "'<='", "'<'", "'=='", "'!='", "'>'", "'>='", "'+'", 
                     "'-'", "'/'", "'*'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "VariableName", "FloatLiteral", "IntegerLiteral", 
                      "StringLiteral", "WORD", "WHITESPACE", "NEWLINE" ]

    RULE_start = 0
    RULE_code = 1
    RULE_statement = 2
    RULE_mainStatement = 3
    RULE_mainStatementNoNewLine = 4
    RULE_methodDeclaration = 5
    RULE_methodHeader = 6
    RULE_methodHeaderVariables = 7
    RULE_methodHeaderVariable = 8
    RULE_methodBody = 9
    RULE_methodStatement = 10
    RULE_methodStatementNoNewLine = 11
    RULE_methodName = 12
    RULE_methodCall = 13
    RULE_forDeclaration = 14
    RULE_forHead = 15
    RULE_forBody = 16
    RULE_forStatement = 17
    RULE_forStatementNoNewLine = 18
    RULE_ifDeclaration = 19
    RULE_ifHead = 20
    RULE_ifBody = 21
    RULE_truePart = 22
    RULE_elsePart = 23
    RULE_ifStatement = 24
    RULE_ifStatementNoNewLine = 25
    RULE_variableDeclaration = 26
    RULE_variableType = 27
    RULE_variableName = 28
    RULE_variableValue = 29
    RULE_variableInitialization = 30
    RULE_condition = 31
    RULE_mathOperation = 32
    RULE_binaryMathOperation = 33
    RULE_unaryMathOperation = 34
    RULE_argument = 35

    ruleNames =  [ "start", "code", "statement", "mainStatement", "mainStatementNoNewLine", 
                   "methodDeclaration", "methodHeader", "methodHeaderVariables", 
                   "methodHeaderVariable", "methodBody", "methodStatement", 
                   "methodStatementNoNewLine", "methodName", "methodCall", 
                   "forDeclaration", "forHead", "forBody", "forStatement", 
                   "forStatementNoNewLine", "ifDeclaration", "ifHead", "ifBody", 
                   "truePart", "elsePart", "ifStatement", "ifStatementNoNewLine", 
                   "variableDeclaration", "variableType", "variableName", 
                   "variableValue", "variableInitialization", "condition", 
                   "mathOperation", "binaryMathOperation", "unaryMathOperation", 
                   "argument" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    VariableName=28
    FloatLiteral=29
    IntegerLiteral=30
    StringLiteral=31
    WORD=32
    WHITESPACE=33
    NEWLINE=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LexParser.EOF, 0)

        def code(self):
            return self.getTypedRuleContext(LexParser.CodeContext,0)


        def getRuleIndex(self):
            return LexParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = LexParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 268438210) != 0):
                self.state = 72
                self.code()


            self.state = 75
            self.match(LexParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LexParser.StatementContext)
            else:
                return self.getTypedRuleContext(LexParser.StatementContext,i)


        def getRuleIndex(self):
            return LexParser.RULE_code

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode" ):
                listener.enterCode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode" ):
                listener.exitCode(self)




    def code(self):

        localctx = LexParser.CodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_code)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 77
                self.statement()
                self.state = 80 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 268438210) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainStatementNoNewLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LexParser.MainStatementNoNewLineContext)
            else:
                return self.getTypedRuleContext(LexParser.MainStatementNoNewLineContext,i)


        def mainStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LexParser.MainStatementContext)
            else:
                return self.getTypedRuleContext(LexParser.MainStatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(LexParser.NEWLINE)
            else:
                return self.getToken(LexParser.NEWLINE, i)

        def getRuleIndex(self):
            return LexParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = LexParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 86
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [28]:
                        self.state = 82
                        self.mainStatement()
                        self.state = 83
                        self.match(LexParser.NEWLINE)
                        pass
                    elif token in [1, 6, 7, 9, 11]:
                        self.state = 85
                        self.mainStatementNoNewLine()
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 88 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(LexParser.VariableDeclarationContext,0)


        def variableInitialization(self):
            return self.getTypedRuleContext(LexParser.VariableInitializationContext,0)


        def getRuleIndex(self):
            return LexParser.RULE_mainStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainStatement" ):
                listener.enterMainStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainStatement" ):
                listener.exitMainStatement(self)




    def mainStatement(self):

        localctx = LexParser.MainStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mainStatement)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.variableInitialization()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainStatementNoNewLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodDeclaration(self):
            return self.getTypedRuleContext(LexParser.MethodDeclarationContext,0)


        def forDeclaration(self):
            return self.getTypedRuleContext(LexParser.ForDeclarationContext,0)


        def ifDeclaration(self):
            return self.getTypedRuleContext(LexParser.IfDeclarationContext,0)


        def getRuleIndex(self):
            return LexParser.RULE_mainStatementNoNewLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainStatementNoNewLine" ):
                listener.enterMainStatementNoNewLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainStatementNoNewLine" ):
                listener.exitMainStatementNoNewLine(self)




    def mainStatementNoNewLine(self):

        localctx = LexParser.MainStatementNoNewLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mainStatementNoNewLine)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.methodDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.forDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.ifDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodHeader(self):
            return self.getTypedRuleContext(LexParser.MethodHeaderContext,0)


        def methodBody(self):
            return self.getTypedRuleContext(LexParser.MethodBodyContext,0)


        def getRuleIndex(self):
            return LexParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)




    def methodDeclaration(self):

        localctx = LexParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methodDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.methodHeader()
            self.state = 100
            self.methodBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodName(self):
            return self.getTypedRuleContext(LexParser.MethodNameContext,0)


        def methodHeaderVariables(self):
            return self.getTypedRuleContext(LexParser.MethodHeaderVariablesContext,0)


        def NEWLINE(self):
            return self.getToken(LexParser.NEWLINE, 0)

        def getRuleIndex(self):
            return LexParser.RULE_methodHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodHeader" ):
                listener.enterMethodHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodHeader" ):
                listener.exitMethodHeader(self)




    def methodHeader(self):

        localctx = LexParser.MethodHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_methodHeader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(LexParser.T__0)
            self.state = 103
            self.methodName()
            self.state = 104
            self.match(LexParser.T__1)
            self.state = 105
            self.methodHeaderVariables()
            self.state = 106
            self.match(LexParser.T__2)
            self.state = 107
            self.match(LexParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodHeaderVariablesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodHeaderVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LexParser.MethodHeaderVariableContext)
            else:
                return self.getTypedRuleContext(LexParser.MethodHeaderVariableContext,i)


        def getRuleIndex(self):
            return LexParser.RULE_methodHeaderVariables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodHeaderVariables" ):
                listener.enterMethodHeaderVariables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodHeaderVariables" ):
                listener.exitMethodHeaderVariables(self)




    def methodHeaderVariables(self):

        localctx = LexParser.MethodHeaderVariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_methodHeaderVariables)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 109
                        self.methodHeaderVariable()
                        self.state = 110
                        self.match(LexParser.T__3) 
                    self.state = 116
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                self.state = 117
                self.methodHeaderVariable()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodHeaderVariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableName(self):
            return self.getTypedRuleContext(LexParser.VariableNameContext,0)


        def variableType(self):
            return self.getTypedRuleContext(LexParser.VariableTypeContext,0)


        def getRuleIndex(self):
            return LexParser.RULE_methodHeaderVariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodHeaderVariable" ):
                listener.enterMethodHeaderVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodHeaderVariable" ):
                listener.exitMethodHeaderVariable(self)




    def methodHeaderVariable(self):

        localctx = LexParser.MethodHeaderVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_methodHeaderVariable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.variableName()
            self.state = 121
            self.match(LexParser.T__4)
            self.state = 122
            self.variableType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LexParser.MethodStatementContext)
            else:
                return self.getTypedRuleContext(LexParser.MethodStatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(LexParser.NEWLINE)
            else:
                return self.getToken(LexParser.NEWLINE, i)

        def methodStatementNoNewLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LexParser.MethodStatementNoNewLineContext)
            else:
                return self.getTypedRuleContext(LexParser.MethodStatementNoNewLineContext,i)


        def getRuleIndex(self):
            return LexParser.RULE_methodBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodBody" ):
                listener.enterMethodBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodBody" ):
                listener.exitMethodBody(self)




    def methodBody(self):

        localctx = LexParser.MethodBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_methodBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 138
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        self.state = 125 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 124
                            _la = self._input.LA(1)
                            if not(_la==6 or _la==7):
                                self._errHandler.recoverInline(self)
                            else:
                                self._errHandler.reportMatch(self)
                                self.consume()
                            self.state = 127 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==6 or _la==7):
                                break

                        self.state = 129
                        self.methodStatement()
                        self.state = 130
                        self.match(LexParser.NEWLINE)
                        pass

                    elif la_ == 2:
                        self.state = 133 
                        self._errHandler.sync(self)
                        _alt = 1
                        while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                            if _alt == 1:
                                self.state = 132
                                _la = self._input.LA(1)
                                if not(_la==6 or _la==7):
                                    self._errHandler.recoverInline(self)
                                else:
                                    self._errHandler.reportMatch(self)
                                    self.consume()

                            else:
                                raise NoViableAltException(self)
                            self.state = 135 
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                        self.state = 137
                        self.methodStatementNoNewLine()
                        pass



                else:
                    raise NoViableAltException(self)
                self.state = 140 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(LexParser.VariableDeclarationContext,0)


        def variableInitialization(self):
            return self.getTypedRuleContext(LexParser.VariableInitializationContext,0)


        def methodCall(self):
            return self.getTypedRuleContext(LexParser.MethodCallContext,0)


        def getRuleIndex(self):
            return LexParser.RULE_methodStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodStatement" ):
                listener.enterMethodStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodStatement" ):
                listener.exitMethodStatement(self)




    def methodStatement(self):

        localctx = LexParser.MethodStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_methodStatement)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.variableInitialization()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.methodCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodStatementNoNewLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forDeclaration(self):
            return self.getTypedRuleContext(LexParser.ForDeclarationContext,0)


        def ifDeclaration(self):
            return self.getTypedRuleContext(LexParser.IfDeclarationContext,0)


        def getRuleIndex(self):
            return LexParser.RULE_methodStatementNoNewLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodStatementNoNewLine" ):
                listener.enterMethodStatementNoNewLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodStatementNoNewLine" ):
                listener.exitMethodStatementNoNewLine(self)




    def methodStatementNoNewLine(self):

        localctx = LexParser.MethodStatementNoNewLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_methodStatementNoNewLine)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.forDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.ifDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VariableName(self):
            return self.getToken(LexParser.VariableName, 0)

        def getRuleIndex(self):
            return LexParser.RULE_methodName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodName" ):
                listener.enterMethodName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodName" ):
                listener.exitMethodName(self)




    def methodName(self):

        localctx = LexParser.MethodNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_methodName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(LexParser.VariableName)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodName(self):
            return self.getTypedRuleContext(LexParser.MethodNameContext,0)


        def methodHeaderVariables(self):
            return self.getTypedRuleContext(LexParser.MethodHeaderVariablesContext,0)


        def getRuleIndex(self):
            return LexParser.RULE_methodCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodCall" ):
                listener.enterMethodCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodCall" ):
                listener.exitMethodCall(self)




    def methodCall(self):

        localctx = LexParser.MethodCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_methodCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.methodName()
            self.state = 154
            self.match(LexParser.T__1)
            self.state = 155
            self.methodHeaderVariables()
            self.state = 156
            self.match(LexParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forHead(self):
            return self.getTypedRuleContext(LexParser.ForHeadContext,0)


        def forBody(self):
            return self.getTypedRuleContext(LexParser.ForBodyContext,0)


        def getRuleIndex(self):
            return LexParser.RULE_forDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForDeclaration" ):
                listener.enterForDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForDeclaration" ):
                listener.exitForDeclaration(self)




    def forDeclaration(self):

        localctx = LexParser.ForDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_forDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.forHead()
            self.state = 159
            self.forBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForHeadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VariableName(self):
            return self.getToken(LexParser.VariableName, 0)

        def IntegerLiteral(self):
            return self.getToken(LexParser.IntegerLiteral, 0)

        def NEWLINE(self):
            return self.getToken(LexParser.NEWLINE, 0)

        def getRuleIndex(self):
            return LexParser.RULE_forHead

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForHead" ):
                listener.enterForHead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForHead" ):
                listener.exitForHead(self)




    def forHead(self):

        localctx = LexParser.ForHeadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_forHead)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6 or _la==7:
                self.state = 161
                _la = self._input.LA(1)
                if not(_la==6 or _la==7):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
